package td2.fichiers;

public enum ComposantType {
    FICHIER, REPERTOIRE
}
